Add unit test for UTF-8 Unicode JWT secret with emoticons/symbols

--- a/postgrest.cabal
+++ b/postgrest.cabal
@@ -127,6 +127,7 @@ Test-Suite spec
                      , Feature.SingularSpec
                      , Feature.StructureSpec
                      , Feature.UnicodeSpec
+                     , Feature.Utf8JwtSecretSpec
                      , Feature.AndOrParamsSpec
                      , SpecHelper
                      , TestTypes
